Komga: Update dependencies and enable RAR5 support (#8257)
* Fixes

* Bump to Trixie

* Update komga-install.sh