@@ -13,7 +13,16 @@ setting_up_container
 network_check
 update_os
 
-JAVA_VERSION="21" setup_java
+msg_info "Installing dependencies"
+$STD apt -y install \
+  libarchive-dev \
+  libjxl-dev \
+  libheif-dev \
+  libwebp-dev
+msg_ok "Installed dependencies"
+
+JAVA_VERSION="23" setup_java
+fetch_and_deploy_gh_release "kepubify" "pgaskin/kepubify" "singlefile" "latest" "/usr/bin" "kepubify-linux-64bit"
 USE_ORIGINAL_FILENAME="true" fetch_and_deploy_gh_release "komga-org" "gotson/komga" "singlefile" "latest" "/opt/komga" "komga*.jar"
 mv /opt/komga/komga-*.jar /opt/komga/komga.jar
 
@@ -26,7 +35,8 @@ After=syslog.target network.target
 [Service]
 Type=simple
 WorkingDirectory=/opt/komga/
-ExecStart=/usr/bin/java -jar -Xmx2g komga.jar
+Environment=LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
+ExecStart=/usr/bin/java --enable-native-access=ALL-UNNAMED -jar -Xmx2g komga.jar
 TimeoutStopSec=20
 KillMode=process
 Restart=on-failure
@@ -41,6 +51,7 @@ motd_ssh
 customize
 
 msg_info "Cleaning up"
-$STD apt-get -y autoremove
-$STD apt-get -y autoclean
+$STD apt -y autoremove
+$STD apt -y autoclean
+$STD apt -y clean
 msg_ok "Cleaned"
